# wyrmhole

./: .prettierignore  LICENSE  README.md  SECURITY.md  eslint.config.mjs  index.html  package-lock.json  package.json  vite.config.ts
.github/: FUNDING.yml  copilot-instructions.md
scripts/: analyze-project.mjs
src/: ActiveDownloadCard.tsx  ActiveSendCard.tsx  App.css  App.tsx  ConnectingCard.tsx  DetailModal.tsx  FileIcon.tsx  Icons.tsx  LoadingDots.tsx  PendingFileOfferCard.tsx  RecieveFileCardComponent.tsx  SentFileCard.tsx  SettingsMenu.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/context-menu/: README.md
src-tauri/context-menu/linux/kde/: wyrmhole.desktop
src-tauri/context-menu/linux/nautilus/: wyrmhole-nautilus.py
src-tauri/context-menu/linux/nemo/: wyrmhole.nemo_action
src-tauri/context-menu/linux/thunar/: uca-snippet.xml
src-tauri/context-menu/macos/: README.md
src-tauri/icons/: icon.icns
src-tauri/src/: context_menu.rs  files.rs  files_json.rs  lib.rs  main.rs  settings.rs
