[package]
name = "wyrmhole"
version = "1.0.0"
description = "A lightweight GUI for magic-wormhole.rs - secure file transfer using Tauri and React"
authors = ["Cwas"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wyrmhole_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
magic-wormhole = "0.7.6"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1.47.1", features = ["time"] }
once_cell = "1.21.3"
serde_json = "1.0.142"
futures = "0.3.31"
tokio-util = { version = "0.7.16", features = ["compat"] }
chrono = { version = "0.4.41", features = ["serde"] }
tauri-plugin-dialog = "2"
tar = "0.4"
flate2 = "1.0"
tauri-plugin-window-state = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"

# Forwards a second launch (e.g. from a file-manager "Send via wyrmhole" entry)
# into the already-running instance instead of spawning a duplicate.
tauri-plugin-single-instance = "2"

# Registry access for the optional Windows "Send via wyrmhole" context-menu
# entry, which the user opts into from Settings (never touched by the installer).
[target.'cfg(windows)'.dependencies]
winreg = "0.52"
